# mitochondrial-alignments

./: .dockerignore  .dockstore.yml  .gitignore  .gitmodules  Dockerfile  README.md  README.txt  alignment-workflow.sh  alignment.pipeline  call-variants.py  conda-env-mito.yml  dockstore.yml  generate-workbooks.py  merge.pipeline  post-process.py  requirements.txt  run-alignments.py  sentieonStartup.sh
beds/: dayama.grch38.200slop.bed  mito.full.human.bed  numt-GRCh38.fixed.bed  shuf-numt.bed
cpp/: CMakeLists.txt  Makefile  compile-notes.txt  inserts-and-cov.cpp  notes.txt
cpp/source/: CMakeLists.txt  call-variants.cpp  cmake_install.cmake  discrete-distributions.hpp  hello_world.cpp  identify-numt.cpp  inserts-and-cov.cpp  mito-align.cpp  sampleBasePileup.hpp  samplePileup.hpp  simulated-reads.cpp
tests/: Test-Analsysi.ipynb  design.tsv  parameters.json  test-file-input.json  test-post-process.json
tests/post-test/: design.csv  design.tsv  parameters.json
wdl-workflows/: alignMultipleSamples.inputs.json  alignMultipleSamples.wdl  alignSample.inputs.json  alignSample.wdl  call-heteroplasmies.inputs.json  call-heteroplasmies.wdl  generatePileup.inputs.json  generatePileup.wdl  post-process-alignments.inputs.json  post-process-alignments.wdl  postProcessAlignments.inputs.json  postProcessAlignments.wdl
